--- a/index.html
+++ b/index.html
@@ -7,17 +7,46 @@
 </head>
 <body>
     <h1>Welcome to my Portfolio</h1>
-    <a href="">About</a>
-    <a href="">Skills</a>
-    <a href=""></a>
+    <a href="" ><button> About </button></a>
+    <a href=""><button>Skills</button></a>
+    <a href=""><button>Projects</button></a>
+    <a href=""><button>Contacts</button></a>
     <h2>Ganesh Sai Manideep Bandaru (GSMB) </h2>
+    <img src="myimage.jpg" width="300" height="300">
     <h3> Undergraduate - Amrita Vishwa Vidyapeetham : Amaravati</h3>
     <p> I am passionate about Artificial Intelligence and programming seems very intresting to me</p>
     <p> I am currently pursuing my B.Tech degree in <em>Amrita Vishwa Vidyapeetham</em><strong> Amaravati Campus,</strong><br> in the course of Computer Science with specalization in Artificial Intelligence</p>
-    <h1> My skills</h1>
+    <h1> My skills </h1>
     <ol>
         <li>C programming Basics</li>
     </ol>
+
+    <h1>Contact Me</h1>
+    <p>Feel free to get in touch with me using the form below </p>
+    <form>
+        <label for="Name">Name</label>
+        <input type="text">
+        <br>
+
+        <label for="email">Email:</label>
+        <input type="email">
+        <br>
+
+        <b>Choose your gender: </b>
+        <input type="radio" id="male" value="male">
+        <label for="male">Male</label>
+        <input type="radio" id="female" value="female">
+        <Label for="female">Female</Label>
+        <br>
+
+        <b>Select your intrests:</b>
+        <input type="checkbox" id="reading" value="reading">
+        <label for="reading">Reading</label>
+        <input type="checkbox" id="coding" value="coding">
+        <label for="coding">coding</label>
+        <br>
+        <button type="submit">Submit</button>
+    </form>
 
 
 </body>
