--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
         <li>C programming Basics</li>
     </ol>
 
+    <h1>My projects</h1>
+    <table border="1">
+        <tr>
+            <th>project</th>
+            <th>Description</th>
+        </tr>
+        <tr>
+            <td>Portofolio website</td>
+            <td>I have built my portfolio website using HTML,CSS & JS</td>    
+        </tr>
+        <tr>
+        <td>Student college tracker</td>
+        <td>This helps in college students beyond studies</td>
+        </tr>
+    </table>
     <h1>Contact Me</h1>
     <p>Feel free to get in touch with me using the form below </p>
     <form>
