--- a/index.html
+++ b/index.html
@@ -6,21 +6,28 @@
     <title>MY Portfolio</title>
 </head>
 <body>
+    <header>
     <h1>Welcome to my Portfolio</h1>
     <a href="" ><button> About </button></a>
     <a href=""><button>Skills</button></a>
     <a href=""><button>Projects</button></a>
     <a href=""><button>Contacts</button></a>
+    </header>
+    <main>
+        <section id="about">
     <h2>Ganesh Sai Manideep Bandaru (GSMB) </h2>
     <img src="myimage.jpg" width="300" height="300">
     <h3> Undergraduate - Amrita Vishwa Vidyapeetham : Amaravati</h3>
     <p> I am passionate about Artificial Intelligence and programming seems very intresting to me</p>
     <p> I am currently pursuing my B.Tech degree in <em>Amrita Vishwa Vidyapeetham</em><strong> Amaravati Campus,</strong><br> in the course of Computer Science with specalization in Artificial Intelligence</p>
+    </section>
+    <section id="skills">
     <h1> My skills </h1>
     <ol>
         <li>C programming Basics</li>
     </ol>
-
+    </section>
+    <section id="projects">
     <h1>My projects</h1>
     <table border="1">
         <tr>
@@ -36,6 +43,8 @@
         <td>This helps in college students beyond studies</td>
         </tr>
     </table>
+    </section>
+    <section id="contact">
     <h1>Contact Me</h1>
     <p>Feel free to get in touch with me using the form below </p>
     <form>
@@ -62,6 +71,8 @@
         <br>
         <button type="submit">Submit</button>
     </form>
+    </section>
+    </main>
 
 
 </body>
