--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MY Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
     <h1>Welcome to my Portfolio</h1>
-    <a href="" ><button> About </button></a>
-    <a href=""><button>Skills</button></a>
-    <a href=""><button>Projects</button></a>
-    <a href=""><button>Contacts</button></a>
+    <a href="" ><button class="button"> About </button></a>
+    <a href=""><button class="button">Skills</button></a>
+    <a href=""><button class="button">Projects</button></a>
+    <a href=""><button class="button">Contacts</button></a>
     </header>
     <main>
         <section id="about">
     <h2>Ganesh Sai Manideep Bandaru (GSMB) </h2>
-    <img src="myimage.jpg" width="300" height="300">
-    <h3> Undergraduate - Amrita Vishwa Vidyapeetham : Amaravati</h3>
+    <img src="myimage.jpg" alt="MyImage" width="300" height="300">
+    <h3> Undergraduate - Amrita Vishwa Vidyapeetham:Amaravati</h3>
     <p> I am passionate about Artificial Intelligence and programming seems very intresting to me</p>
     <p> I am currently pursuing my B.Tech degree in <em>Amrita Vishwa Vidyapeetham</em><strong> Amaravati Campus,</strong><br> in the course of Computer Science with specalization in Artificial Intelligence</p>
     </section>
@@ -69,7 +70,7 @@
         <input type="checkbox" id="coding" value="coding">
         <label for="coding">coding</label>
         <br>
-        <button type="submit">Submit</button>
+        <button type="submit" class="submit">Submit</button>
     </form>
     </section>
     </main>
