--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
+    <header class="modification">
     <h1>Welcome to my Portfolio</h1>
     <div>
     <a href="#about" ><button class="button"> About </button></a>
