--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
     <h1> My skills </h1>
     <ol>
         <li>C programming Basics</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>Basic Js</li>
     </ol>
     </section>
     <section id="projects">
@@ -45,6 +48,10 @@
         <td>Student college tracker</td>
         <td>This helps in college students beyond studies</td>
         </tr>
+        <tr>
+            <td>AquaConnect</td>
+            <td>Helps small scale fish farmers in enabling sustainable aquacultural practices</td>
+            </tr>
     </table>
     </section>
     <section id="contact">
