--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <td>Helps small scale fish farmers in enabling sustainable aquacultural practices</td>
             </tr>
     </table>
-    <button class="button"> <a href="" >https://gsmb-ghannesh.github.io/aquaconnect/PowerHackerWinner.html</a>AQUACONNECT</button>
+    <button class="button"><a href="https://gsmb-ghannesh.github.io/aquaconnect/PowerHackerWinner.html">Aquaconnect</a></button>
     </section>
     <section id="contact">
     <h1>Contact Me</h1>
